--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validation": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.1"
+    "mysql2": "^3.6.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -27,7 +34,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^20.6.0",
+    "@types/node": "^20.6.2",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2"
   }
