--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@types/cors": "^2.8.14",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.6.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2"
   }
