--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "16.20.2"
   },
-  "main": "dist/index.js",
+  "main": "dist/app.js",
   "scripts": {
     "start": "node ./src/app.ts",
     "dev": "nodemon ./src/app.ts",
