--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "engines": {
     "node": "16.20.2"
   },
-  "main": "dist/app.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node ./src/app.ts",
+    "start": "node ./dist/app.js",
     "dev": "nodemon ./src/app.ts",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
